# NextGen

./: .gitignore  CHANGELOG.md  README.md
manager/: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  __init__.py  conftest.py  desktop_app.py  docker-compose.yml  pyproject.toml  pytest.ini  setup.py  start_orchestratorx.bat
manager/.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
manager/.github/workflows/: ci.yml  release.yml
manager/backend/: __init__.py  app.py  health.py  models.py  orchestrator.py  process_manager.py  project_store.py  requirements.txt
manager/backend/manager/data/: projects.yaml
manager/backend/static/: dashboard.css  dashboard.html  dashboard.js  index.html
manager/data/: projects.example.yaml
manager/tests/: __init__.py  test_models.py  test_project_store.py
