[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextgen-hub"
version = "1.0.0"
description = "Advanced Process Management System for Windows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NextGen Hub Team", email = "info@nextgenhub.com"}
]
maintainers = [
    {name = "NextGen Hub Team", email = "info@nextgenhub.com"}
]
keywords = ["process management", "monitoring", "windows", "system administration", "web dashboard"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "psutil==5.9.8",
    "PyYAML==6.0.2",
    "httpx==0.27.0",
    "starlette==0.37.2",
    "python-multipart==0.0.9",
    "rich==13.7.1",
    "colorama==0.4.6",
    "websockets==12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
]

[project.scripts]
nextgen-hub = "manager.desktop_app:main"
nextgen-server = "manager.backend.app:run"

[project.urls]
Homepage = "https://github.com/nextgenhub/nextgen-hub"
Documentation = "https://github.com/nextgenhub/nextgen-hub/wiki"
Repository = "https://github.com/nextgenhub/nextgen-hub"
"Bug Tracker" = "https://github.com/nextgenhub/nextgen-hub/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["manager*"]

[tool.setuptools.package-data]
manager = [
    "backend/static/*",
    "backend/static/*/*",
    "data/*.yaml",
    "data/*.example.yaml",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 